# cnpja-sdk-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  Taskfile.yml  codegen_instructions.md  pyproject.toml  release-please-config.json
.devcontainer/: bootstrap.sh  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml
.github/instructions/: repo-config.instructions.md
.github/workflows/: quality_control.yml  release.yml
schemas/: openapi.json  schemas-summary.json
scripts/: check_branch_name.py
src/cnpja/: __init__.py  _common.py  _http_client.py  client.py  errors.py  open_client.py  pagers.py  version.py
src/cnpja/resources/: __init__.py  _base.py  ccc.py  company.py  credit.py  list.py  office.py  open_office.py  person.py  rfb.py  simples.py  suframa.py  zip.py
src/cnpja/types/: __init__.py  _enums.py  ccc.py  common.py  company.py  credit.py  list.py  office.py  person.py  rfb.py  simples.py  suframa.py  zip.py
tests/: conftest.py  test_edge_cases.py  test_errors.py  test_http_client.py  test_lifecycle.py  test_pager.py  test_types.py
tests/resources/: test_ccc.py  test_company.py  test_credit.py  test_list.py  test_office.py  test_open_office.py  test_person.py  test_rfb.py  test_simples.py  test_suframa.py  test_zip.py
